# keysignt-interview

./: .gitignore  CMakeLists.txt  CodingChallenge.md  README.md  coding-challenge  coding-challenge.l  coding-challenge.tab.c  coding-challenge.tab.h  coding-challenge.y  generic-test.cc  jest.config.js  lex.yy.c  make.sh  package-lock.json  package.json  pnpm-lock.yaml  prepare.sh  test.sh  tsconfig.json
examples/example4/subfolder/: ex3.lib
examples/example5/: root.prog
examples/example6/: ex1.lib  ex2.lib
examples/example6/subfolder/subfolder/subfolder/subfolder/subfolder/: ex1.lib  ex2.lib
src/: DependencyHash.ts  GrammerHelpers.ts  Imports.ts  fileHelpers.ts  index.ts
src/__test__/: ImportStatmentGrammarLexer.spec.ts  ProgramGrammarLexer.ts  buildDependencyHash.spec.ts
src/import-statement-grammar/: ImportStatementGrammar.g4  ImportStatementGrammarLexer.tokens  ImportStatementGrammarLexer.ts
src/import-statment-grammar/: ImportStatmentGrammar.g4  ImportStatmentGrammarLexer.interp  ImportStatmentGrammarLexer.ts
src/program-grammar/: CustomVisitor.ts  ProgramGrammar.g4  ProgramGrammarLexer.interp  ProgramGrammarLexer.tokens  ProgramGrammarLexer.ts
src/program-grammar/Custom/: CustomListener.ts  CustomVisitor.ts
tests/: 1.res  2.out  2.res  3.out  4.in  4.out  5.out  7.res
